--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -13,6 +13,7 @@
 #define UA_OPEN62541_VER_PATCH ${OPEN62541_VER_PATCH}
 #define UA_OPEN62541_VER_LABEL "${OPEN62541_VER_LABEL}" /* Release candidate label, etc. */
 #define UA_OPEN62541_VER_COMMIT "${OPEN62541_VER_COMMIT}"
+#define UA_OPEN62541_VERSION "${OPEN62541_VERSION}"
 
 /**
  * Feature Options
