--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -165,7 +165,7 @@ if(UA_ENABLE_HISTORIZING)
     add_example(tutorial_server_historicaldata tutorial_server_historicaldata.c)
 endif()
 
-if(UA_ENABLE_ENCRYPTION)
+if(UA_ENABLE_ENCRYPTION OR UA_ENABLE_ENCRYPTION STREQUAL "MBEDTLS" OR UA_ENABLE_ENCRYPTION STREQUAL "OPENSSL")
     add_example(server_encryption encryption/server_encryption.c)
     add_example(client_encryption encryption/client_encryption.c)
     target_include_directories(server_encryption PRIVATE "${PROJECT_SOURCE_DIR}/examples")
@@ -183,7 +183,7 @@ endif()
 if(UA_ENABLE_NODEMANAGEMENT)
     add_example(access_control_server access_control/server_access_control.c)
     add_example(access_control_client access_control/client_access_control.c)
-    if(UA_ENABLE_ENCRYPTION)
+    if(UA_ENABLE_ENCRYPTION OR UA_ENABLE_ENCRYPTION STREQUAL "MBEDTLS" OR UA_ENABLE_ENCRYPTION STREQUAL "OPENSSL")
     add_example(access_control_client_encrypt access_control_encrypt/client_access_control_encrypt.c)
     endif()
 endif()
