--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -35,7 +35,6 @@
 #cmakedefine UA_ENABLE_PUBSUB_INFORMATIONMODEL
 #cmakedefine UA_ENABLE_PUBSUB_INFORMATIONMODEL_METHODS
 #cmakedefine UA_ENABLE_DA
-#cmakedefine UA_ENABLE_ENCRYPTION
 #cmakedefine UA_ENABLE_HISTORIZING
 #cmakedefine UA_ENABLE_PARSING
 #cmakedefine UA_ENABLE_EXPERIMENTAL_HISTORIZING
@@ -46,6 +45,9 @@
 #cmakedefine UA_ENABLE_MQTT_TLS_OPENSSL
 #cmakedefine UA_ENABLE_ENCRYPTION_MBEDTLS
 #cmakedefine UA_ENABLE_ENCRYPTION_OPENSSL
+#if defined(UA_ENABLE_ENCRYPTION_MBEDTLS) || defined(UA_ENABLE_ENCRYPTION_OPENSSL)
+#define UA_ENABLE_ENCRYPTION
+#endif
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS_ALARMS_CONDITIONS
 
 /* Multithreading */
