--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -22,13 +22,22 @@ jobs:
             cmd_action: CC=tcc unit_tests
           - name: Encryption (MbedTLS) Build & Unit Tests (gcc)
             cmd_deps: sudo apt-get install -y -qq libmbedtls-dev
-            cmd_action: unit_tests_encryption_mbedtls
+            cmd_action: unit_tests_encryption MBEDTLS
           - name: PubSub Encryption (MbedTLS) Build & Unit Tests (gcc)
             cmd_deps: sudo apt-get install -y -qq libmbedtls-dev
             cmd_action: unit_tests_encryption_mbedtls_pubsub
           - name: Encryption (OpenSSL) Build & Unit Tests (gcc)
             cmd_deps: sudo apt-get install -y -qq openssl
-            cmd_action: unit_tests_encryption_openssl
+            cmd_action: unit_tests_encryption OPENSSL
+          - name: Encryption (LibreSSL) Build & Unit Tests (gcc)
+            cmd_deps: |
+                sudo apt-get install -y -qq curl
+                curl https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.3.3.tar.gz --output libressl.tar.gz
+                tar -xvz -f libressl.tar.gz
+                cd libressl-3.3.3
+                ./configure
+                sudo make install
+            cmd_action: unit_tests_encryption LIBRESSL
           - name: Release Build
             cmd_deps: sudo apt-get install -y -qq libmbedtls-dev
             cmd_action: build_release
