--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -14,6 +14,9 @@ jobs:
           - name: Debug Build & Unit Tests with multithreading (gcc)
             cmd_deps: ""
             cmd_action: unit_tests_mt
+          - name: Debug Build & Unit Tests with Alarms&Conditions (gcc)
+            cmd_deps: ""
+            cmd_action: unit_tests_alarms
           - name: Debug Build & Unit Tests (clang)
             cmd_deps: sudo apt-get install -y -qq clang-11 clang-tools-11
             cmd_action: CC=clang-11 CXX=clang++-11 unit_tests
