--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -172,6 +172,12 @@ if(UA_ENABLE_ENCRYPTION OR UA_ENABLE_ENCRYPTION STREQUAL "MBEDTLS" OR UA_ENABLE_
     add_example(client_encryption encryption/client_encryption.c)
     target_include_directories(server_encryption PRIVATE "${PROJECT_SOURCE_DIR}/examples")
     target_include_directories(client_encryption PRIVATE "${PROJECT_SOURCE_DIR}/examples")
+    if(UA_ENABLE_TPM2_KEYSTORE)
+        add_example(server_encryption_tpm_keystore encryption/server_encryption_tpm_keystore.c)
+        add_example(client_encryption_tpm_keystore encryption/client_encryption_tpm_keystore.c)
+        target_link_libraries(server_encryption_tpm_keystore tpm2_pkcs11 ssl crypto)
+        target_link_libraries(client_encryption_tpm_keystore tpm2_pkcs11 ssl crypto)
+    endif()
 endif()
 
 if (NOT (BUILD_SHARED_LIBS AND WIN32))
