Fix in docker build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
-FROM alpine:3.10
-RUN apk add --no-cache cmake gcc git g++ musl-dev mbedtls-dev python py-pip make && rm -rf /var/cache/apk/*
+FROM ubuntu:20.04
+ENV TZ=UTC
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN apt-get update -qq && apt-get install -y -qq cmake gcc git g++ musl-dev libmbedtls-dev python3 python3-pip make
 ADD . /opt/open62541
 
 # Get all the git tags to make sure we detect the correct version with git describe
@@ -26,10 +28,10 @@ RUN make install
 WORKDIR /opt/open62541
 
 # Generate certificates
-RUN apk add --no-cache python-dev linux-headers openssl && rm -rf /var/cache/apk/*
+RUN apt-get install -y python3-dev openssl
 RUN pip install netifaces==0.10.9
 RUN mkdir -p /opt/open62541/pki/created
-RUN python /opt/open62541/tools/certs/create_self-signed.py /opt/open62541/pki/created
+RUN python3 /opt/open62541/tools/certs/create_self-signed.py /opt/open62541/pki/created
 
 
 EXPOSE 4840
