--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -44,7 +44,7 @@
 #cmakedefine UA_ENABLE_MQTT_TLS
 #cmakedefine UA_ENABLE_MQTT_TLS_OPENSSL
 #cmakedefine UA_ENABLE_ENCRYPTION_MBEDTLS
-#cmakedefine UA_ENABLE_TPM2_PKCS11
+#cmakedefine UA_ENABLE_TPM2_SECURITY
 #cmakedefine UA_ENABLE_ENCRYPTION_OPENSSL
 #cmakedefine UA_ENABLE_ENCRYPTION_LIBRESSL
 #if defined(UA_ENABLE_ENCRYPTION_MBEDTLS) || defined(UA_ENABLE_ENCRYPTION_OPENSSL) || defined(UA_ENABLE_ENCRYPTION_LIBRESSL)
