--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -240,7 +240,7 @@ if(UA_ENABLE_PUBSUB)
     if(UA_ENABLE_PUBSUB_ENCRYPTION)
         add_example(pubsub_publish_encrypted pubsub/pubsub_publish_encrypted.c)
         add_example(pubsub_subscribe_encrypted pubsub/pubsub_subscribe_encrypted.c)
-        if(UA_ENABLE_TPM2_PKCS11)
+        if(UA_ENABLE_TPM2_SECURITY)
             add_example(pubsub_publish_encrypted_tpm pubsub/pubsub_publish_encrypted_tpm.c)
             add_example(pubsub_subscribe_encrypted_tpm pubsub/pubsub_subscribe_encrypted_tpm.c)
         endif()
