refactore(build): Modify CMake option for TPM Encryption
 - Remove mutually exclusive CMake option to support both
   PKCS11 and Keystore

Change-Id: Ib4c89959df29b6d1a2b298fb239e9210767968a0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,14 +212,13 @@ endif()
 
 # TPM Security
 set(UA_ENABLE_ENCRYPTION_TPM2 "OFF" CACHE STRING "TPM encryption support")
-SET_PROPERTY(CACHE UA_ENABLE_ENCRYPTION_TPM2 PROPERTY STRINGS "PKCS11" "KEYSTORE" "OFF")
+SET_PROPERTY(CACHE UA_ENABLE_ENCRYPTION_TPM2 PROPERTY STRINGS "ON" "OFF")
 
 if(UA_ENABLE_ENCRYPTION_TPM2 STREQUAL "OFF")
     set(UA_ENABLE_TPM2_SECURITY OFF)
     set(UA_ENABLE_TPM2_KEYSTORE OFF)
-elseif(UA_ENABLE_ENCRYPTION_TPM2 STREQUAL "PKCS11")
+else()
     set(UA_ENABLE_TPM2_SECURITY ON)
-elseif(UA_ENABLE_ENCRYPTION_TPM2 STREQUAL "KEYSTORE")
     set(UA_ENABLE_TPM2_KEYSTORE ON)
 endif()
 
