refactor(core): Pull out ZIP_FFS32 from ziptree.h into ziptree.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -939,6 +939,7 @@ set(lib_sources ${PROJECT_SOURCE_DIR}/src/ua_types.c
                 ${PROJECT_SOURCE_DIR}/deps/pcg_basic.c
                 ${PROJECT_SOURCE_DIR}/deps/base64.c
                 ${PROJECT_SOURCE_DIR}/deps/aa_tree.c
+                ${PROJECT_SOURCE_DIR}/deps/ziptree.c
                 
                 ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_config.c)
 
